elastic-eck/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-kibana
  namespace: elastic-system
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["kibana.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: kibana-kb-http
        weight: 1
        port: 5601
    - backendRefs:
      - name: kibana-kb-http
        weight: 1
        port: 5601
